--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".BarcodeScan"
+            android:label="@string/title_activity_barcode_scan"
+            android:parentActivityName=".DownloadManifests"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.finalproject.DownloadManifests" />
+        </activity>
+        <activity
             android:name=".DownloadManifests"
             android:label="@string/title_activity_download_manifests"
             android:parentActivityName=".Welcome"
