--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,10 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.android.gms:play-services-base:16.0.1'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
-    implementation 'com.acker:simplezxing:1.5'
+    implementation 'com.google.android.gms:play-services:7.8+'
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
     implementation 'android.arch.persistence.room:runtime:1.1.1'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
